Collapse nav @ 1300 px, prevent awkward collision

--- a/vf-react/src/static/css/style.css
+++ b/vf-react/src/static/css/style.css
@@ -76,7 +76,7 @@ ul.nav a:hover {
 }
 
 /* This changes when navbar collapses */
- @media (max-width: 1100px) {
+ @media (max-width: 1300px) {
   .navbar-header {
       float: none;
   }
